manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cbull-dev
  name: cbull-dev
  labels:
    app: cbull-dev
spec:
  selector:
    matchLabels:
      app: cbull-dev
  template:
    metadata:
      labels:
        app: cbull-dev
    spec:
      containers:
        - name: cbull-dev
          image: main-610916ac70803dc065dd40081108c9e7f6187c15
