manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cbull-dev
  namespace: cbull-dev
  labels:
    app: cbull-dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cbull-dev
  sessionAffinity: None
  type: ClusterIP
