manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cbull-dev
  namespace: cbull
  labels:
    app: cbull-dev
  annotations:
    acme.cert-manager.io/http01-ingress-class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: nginx
  rules:
    - host: cbull.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: cbull-dev
              servicePort: 80
  tls:
    - hosts:
      - cbull.dev
      secretName: cbull-dev-acme-certificate
